FrontEnd/Pages/TrackingPages/TrackingPage.razor.css
.connection-bar {
    position: relative;
    z-index: 1;
    width: 70px;
    border-radius: 0.5rem;
    background-color: #1e1e24;
    /*Spaces connection div from status bar*/
    margin-left: 5px !important;
    display: flex;
    justify-content: center;
    align-items: center;
    color: white;
    text-shadow: 0 2px 2px rgba(0,0,0,0.5);
    font-size: 2.5rem;
    font-weight: 700;
}

    .connection-bar:before {
        content: attr(data-hover);
        visibility: hidden;
        opacity: 0;
        width: 70px;
        background-color: #696969;
        text-align: center;
        border-radius: 5px;
        padding: 5px 0;
        transition: opacity 1s ease-in-out;
        position: absolute;
        z-index: 1;
        left: 0;
        top: 110%;
        color: white;
        text-shadow: 0 2px 2px rgba(0,0,0,0.5);
        font-size: 0.8rem;
        font-weight: 700;
    }

    .connection-bar:hover:before {
        opacity: 1;
        visibility: visible;
    }

    .connection-bar:hover {
        transform: scale(1.02);
    }

.status-bar {
    height: 85.2px;
    border-radius: 0.5rem;
    flex-grow: 1;
    overflow-y: auto;
    background-color: #3f7cac;
    padding: 1.5rem !important;
    color: white;
    text-shadow: 0 2px 2px rgba(0,0,0,0.5);
    font-size: 24px;
    font-weight: 700;
}

.quick-look {
    border-radius: 0.5rem;
    display: flex;
    padding: 0px !important;
}

.content {
    margin-top: 0.5rem;
    border-radius: 0.5rem;
    display: flex;
    padding: 0px !important;
}

.map {   
    height:750px;
    width:80%;
    border-radius: 0.5rem;
    float: right;
}

.drone-bar {
    margin-right: 0.5rem;
    padding: 0rem;
    border-radius: 0.5rem;
    background-color: #1e1e24;
    flex-grow: 1; 
    color: white;
}

.selection-bar {
    height: 60px;
    border-radius: 0.5rem;
    background-color: #35353a;
    padding-left: 0.5rem;
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
    margin: 0.5rem 0.5rem 0.5rem 0.5rem;
    color: white;
    text-shadow: 0 2px 2px rgba(0,0,0,0.5);
    font-size: 24px;
    font-weight: 700;
}

/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/

.dropbtn {
    background-color: #04AA6D;
    color: white;
    padding: 16px;
    color: white;
    text-shadow: 0 2px 2px rgba(0,0,0,0.5);
    font-size: 24px;
    font-weight: 700;
    border: none;
}

.dropdown {
    position: relative;
    display: inline-block;
    color: white;
    text-shadow: 0 2px 2px rgba(0,0,0,0.5);
    font-size: 24px;
    font-weight: 700;
    margin-top: 5px;
    margin-left: 20px;
}

.dropdown-content {
    display: none;
    position: absolute;
    border-radius: 0.5rem;
    background-color: #35353a;
    min-width: 150px;
    /*    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); */
    box-shadow: 0 3px 4px rgba(0,0,0,0.4);
    z-index: 1;
}

    .dropdown-content btn {
        color: white;
        padding: 12px 12px;
        text-decoration: none;
        display: block;
    }

        .dropdown-content btn:hover {
            background-color: rgba(255,255,255,0.1);
            border-radius: 0.5rem;
        }

.dropdown:hover .dropdown-content {
    display: block;
}

.dropdown:hover .dropbtn {
    background-color: #F00000;
}



.noBorder {
    float: left;
    margin: 0px;
    padding: 0px;
    padding-right: 24px;
}

.checkBox {
    float: left;
    margin-top: 6.6px;
    margin-right: 6px;
    width: 24px;
    height: 24px;
}

/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/


.drone-fleet {
    display: grid;
    grid-template-columns: repeat(auto-fill, 20rem);
    grid-gap: 1rem;
    justify-content: center;
    padding-left: 0.5rem;
    padding-right: 0.5rem;
    padding-top: 0.5rem;
    height: 650px;
    z-index: 1;
    overflow-y: scroll;
    margin: 0rem 0.75rem 0.75rem 0.25rem;
}

    .drone-fleet::-webkit-scrollbar {
        width: 10px;
        background-color: #35353a !important;
        border-radius: 0.5rem;
    }

    .drone-fleet::-webkit-scrollbar-corner {
        background-color: #F00000 !important;
    }
    /* Handle */
    .drone-fleet::-webkit-scrollbar-thumb {
        background: #3f7cac !important;
    }

    .drone-fleet > li {
        height: 10rem;
        position: relative;
        z-index: 0;
        background-size: cover;
        border-radius: 0.5rem;
        list-style-type: none;
        box-shadow: 0 3px 4px rgba(0,0,0,0.4);
        transition: 0.1s ease-out;
    }

        .drone-fleet > li:hover {
            transform: scale(1.01);
        }


.drone-status {
    border-radius: 0.5rem;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    position: absolute;
    padding: 1rem 1rem;
    color: #fff2cc;
    cursor: pointer;
    text-shadow: 0 2px 2px rgba(0,0,0,0.5);
    line-height: 1.25rem;
}

    .drone-status .title {
        color: #3b3b3b;
        font-size: 1.5rem;
        font-weight: 700;
        display: block;
        margin: 0.2rem 0 0.4rem 0;
        font-family: 'Bahnschrift', Arial, Helvetica, sans-serif;
        text-transform: uppercase;
    }

    .drone-status .price {
        position: absolute;
        bottom: 0.5rem;
        right: 1rem;
        font-size: 1.5rem;
        font-weight: 700;
        padding: 0rem 0.7rem;
        border-radius: 4px;
        background-color: #08af08;
        color: white;
        line-height: 2rem;
    }

    .drone-status .more {
        position: absolute;
        bottom: 0.5rem;
        left: 0.3rem;
        padding: 0rem 0.7rem;
        line-height: 2rem;
    }



    

